--- a/Components/Pages/AndonDashboardComponents/AndonHeader.razor
+++ b/Components/Pages/AndonDashboardComponents/AndonHeader.razor
@@ -14,21 +14,30 @@
 
     <!-- RIGHT GROUP: META -->
     <div class="meta">
-        <div>
+        <div class="meta-item">
             <label>Date</label>
             <span>@Date.ToString("dd-MM-yyyy")</span>
         </div>
-        <div>
+
+        <div class="meta-separator"></div>
+
+        <div class="meta-item">
             <label>Time</label>
             <span>@Date.ToString("hh:mm tt")</span>
         </div>
-        <div>
+
+        <div class="meta-separator"></div>
+
+        <div class="meta-item">
             <label>Plant</label>
-            <span>CDC-01</span>
+            <span>CDC - 01</span>
         </div>
-        <div>
+
+        <div class="meta-separator"></div>
+
+        <div class="meta-item">
             <label>Shift</label>
-            <span>S-01</span>
+            <span>S - 01</span>
         </div>
     </div>
 
